--- a/Login.html
+++ b/Login.html
@@ -33,6 +33,6 @@
 			 
 		 </div>
 	</div>
-        
+        <script data-ad-client="ca-pub-2136779666482159" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     </body>
 </html>
